tests/snapshots/launch__launch_plan_every_key.snap
---
source: tests/launch.rs
expression: "scrub(&render(&plan),\n&[(Path::new(ROOT), \"<root>\"), (Path::new(DUMPS), \"<app-dir>\"),\n(Path::new(SELF_EXE), \"<self>\")])"
---
program: <root>/erts-17.0.5/bin/erlexec
argv:
  -args_file
  <root>/releases/vm.args
  -boot
  <root>/bin/no_dot_erlang
  -noshell
  +B
  +fnl
  -config
  <root>/releases/sys
  -heart
  -pa
  <root>/lib/hello/ebin
  -pa
  <root>/lib/stdlib-8.0.3/ebin
  +SDio
  4
  -eval
  'hello@@main':run('hello')
  -extra
  --name
  world
set:
  ROOTDIR=<root>
  BINDIR=<root>/erts-17.0.5/bin
  EMU=beam
  PROGNAME=hello
  HOME=<root>
  ERL_CRASH_DUMP=<app-dir>/erl_crash.dump
  GINARY_ENV_ONE=one
  GINARY_ENV_TWO=two
  HEART_COMMAND=<self> --name world
remove:
  ERL_LIBS
  ERL_FLAGS
  ERL_AFLAGS
  ERL_ZFLAGS
  ERL_ROOTDIR
  ERL_EPMD_PORT
